# cpp-properties

./: .gitignore  CMakeLists.txt  Doxyfile  Jenkinsfile  LICENSE  main.cpp  readme.md
.github/workflows/: ci.yml
cppproperties/: CMakeLists.txt  archiver.hpp  archiver_gpds.cpp  archiver_gpds.hpp  archiver_json.cpp  archiver_json.hpp  archiver_xml.cpp  archiver_xml.hpp  cppproperties-config.cmake  cppproperties.hpp  exceptions.hpp  external.cmake  properties.hpp  property.hpp  property_ex.hpp  property_ex_boost.hpp  property_ex_cpp.hpp  property_ex_cpp_modern.hpp  property_ex_qt.hpp  serialization.hpp
cppproperties/qt_widgets/: boolean.cpp  boolean.hpp  factory.hpp  integer.cpp  integer.hpp  nested.hpp  widget_base.hpp
doc/: project.smlt
doc/hugo/: config.toml
doc/hugo/content/docs/: builtin_types.md  introduction.md
doc/hugo/content/docs/properties/: _index.md  raw_properties.md
doc/hugo/content/docs/types/: _index.md  builtin_types.md  custom_types.md
doc/uml/: model.mdj
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  main.cpp
examples/custom_types/: CMakeLists.txt  main.cpp
examples/gpds/: CMakeLists.txt  main.cpp
examples/json/: CMakeLists.txt  main.cpp
examples/linked_properties/: CMakeLists.txt  main.cpp
examples/linked_property_functions/: CMakeLists.txt  main.cpp
examples/nested/: CMakeLists.txt  main.cpp
examples/notification/: CMakeLists.txt  main.cpp
examples/playground/: CMakeLists.txt  main.cpp
examples/qt_widgets/: CMakeLists.txt  main.cpp
examples/serialization/: CMakeLists.txt  main.cpp
examples/xml/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  archiver_xml.cpp  archiver_xml.hpp  exceptions.hpp  properties.hpp  property.hpp  property_ex.hpp  property_ex_cpp.hpp  property_ex_cpp_modern.hpp  property_ex_qt.hpp
test/: CMakeLists.txt  test.hpp
test/test_suites/: 01_builtin_types.cpp  02_builtin_types_cpp.cpp  03_nested.cpp  CMakeLists.txt  attributes.cpp  boost.cpp  isolation.cpp  iterable.cpp  linked_properties.cpp  properties.cpp  properties_construction.cpp  property.cpp  property_construction.cpp  qt.cpp  serialization_json.cpp
test/tests/: 01_builtin_types.cpp  02_builtin_types_cpp.cpp  03_nested.cpp  CMakeLists.txt
