add_subdirectory(basic)
add_subdirectory(custom_types)
if (CPPPROPERTIES_ENABLE_GPDS)
    add_subdirectory(gpds)
endif()
add_subdirectory(linked_properties)
add_subdirectory(linked_property_functions)
add_subdirectory(nested)
add_subdirectory(notification)
if (CPPPROPERTIES_ENABLE_QT_WIDGETS)
    add_subdirectory(qt_widgets)
endif()
add_subdirectory(serialization)
